springboot-k8s/springboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  selector:
    matchLabels:
      app: springboot
  replicas: 2
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: 685853271774.dkr.ecr.ap-northeast-2.amazonaws.com/springboot:lastest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: springboot
